--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ nav.scrolled ul li a {
   </header>
 
   <!-- Sections -->
-  <!-- <section id="facts">
+  <section id="facts">
     <h2>Energy and Environment Facts</h2>
     <p>Key insights and data about sustainability, energy storage, and environmental engineering.</p>
   </section>
@@ -309,7 +309,7 @@ nav.scrolled ul li a {
   <section id="publishing">
     <h2>Publishing</h2>
     <p>EarthMag publishes articles from students, researchers, and professionals worldwide. Join us in shaping the conversation.</p>
-  </section> -->
+  </section>
 
   <!-- Footer -->
   <div class="footer" id="contact">
