--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@ margin: 0; padding: 0; box-sizing: border-box; }
       position: relative; z-index: 1;
       max-width: 800px;
     }
-    header h1 { font-family: 'Playfair Display', serif; font-size: 72px; margin-bottom: 20px; color: white;; }
+    header h1 { font-family: 'Playfair Display', serif; font-size: 72px; margin-bottom: 20px; color: white;transition: 1s; }
+    header h1:hover {color: rgba(255, 255, 255, 0.15); transition: 1s;}
+
     header p { font-family: 'Inter', sans-serif; font-size: 22px; margin-bottom: 30px; color:white; }
     header a {
       font-family: 'Inter', sans-serif;
@@ -250,13 +252,27 @@ transition: 0.5s;
 }
 
 
+/* Slide animations */
+.slide-in {
+  transform: translateX(-100%);
+  opacity: 0;
+  transition: transform 0.6s ease, opacity 0.6s ease;
+}
 
+.slide-in.active {
+  transform: translateX(0);
+  opacity: 1;
+}
+
+.slide-out {
+  transform: translateX(100%);
+  opacity: 0;
+  transition: transform 0.6s ease, opacity 0.6s ease;
+}
   </style>
 </head>
 <body>
-
-  <!-- Navigation -->
-  <nav>
+    <nav>
     <div class="logo" id="logo">EarthMag</div>
     <ul>
       <li><a href="facts.html">Facts</a></li>
@@ -268,6 +284,8 @@ transition: 0.5s;
       <li><a href="journal.html">Journal</a></li>
     </ul>
   </nav>
+<div class="slide-in" id="pageWrapper">
+  <!-- Navigation -->
 
   <!-- Hero Section -->
   <header>
@@ -363,6 +381,7 @@ transition: 0.5s;
     </div>
   </div>
 
+</div>
   <div class="custom-cursor" id="customCursor"></div>
 
 <script>
@@ -444,6 +463,39 @@ transition: 0.5s;
           customCursor.classList.remove('nav-hover');
         });
       });
+
+document.addEventListener('DOMContentLoaded', () => {
+  const page = document.getElementById('pageWrapper');
+  
+  // Slide in on load
+  setTimeout(() => {
+    page.classList.add('active');
+  }, 50);
+
+  // Animate navigation to journal page (index.html)
+  const journalLink = document.querySelector('a[href="journal.html"]');
+  if(journalLink) {
+    journalLink.addEventListener('click', (e) => {
+      e.preventDefault();
+      page.classList.add('slide-out');
+      setTimeout(() => {
+        window.location.href = journalLink.href;
+      }, 500); // matches CSS transition
+    });
+  }
+
+  // Optional: animate back to index from journal page
+  const indexLink = document.querySelector('a[href="index.html"]');
+  if(indexLink) {
+    indexLink.addEventListener('click', (e) => {
+      e.preventDefault();
+      page.classList.add('slide-out');
+      setTimeout(() => {
+        window.location.href = indexLink.href;
+      }, 500);
+    });
+  }
+});
 </script>
 </body>
 </html>
