--- a/journal.html
+++ b/journal.html
@@ -6,6 +6,8 @@
   <title>EarthMag</title>
   <link rel="icon" type="image/png" href="favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Tourney:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
   <style>
     * {   cursor: none !important;
 margin: 0; padding: 0; box-sizing: border-box; }
@@ -51,7 +53,7 @@ margin: 0; padding: 0; box-sizing: border-box; }
       max-width: 90%;
       padding: 14px 28px;
       border-radius: 18px;
-      background: rgba(0, 0, 0, 0.15);
+      background: rgba(255, 255, 255) !important;
       backdrop-filter: blur(25px) saturate(180%);
       -webkit-backdrop-filter: blur(25px) saturate(180%);
       box-shadow: 0 8px 32px rgba(0,0,0,0.2);
@@ -305,7 +307,8 @@ transition: 0.5s;
 .slide-in-left.active { transform: translateX(0); opacity: 1; transition: transform 0.6s ease, opacity 0.6s ease; }
 
 .slide-out-left  { transform: translateX(-100%); opacity: 0; transition: transform 0.5s ease, opacity 0.5s ease; }
-.slide-out-right { transform: translateX(100%); opacity: 0; transition: transform 0.5s ease, opacity 0.5s ease; }  </style>
+.slide-out-right { transform: translateX(100%); opacity: 0; transition: transform 0.5s ease, opacity 0.5s ease; }  
+</style>
 </head>
 <body>
     <nav>
@@ -320,10 +323,34 @@ transition: 0.5s;
       <li><a href="journal.html" class="activePage">Journal</a></li>
     </ul>
   </nav>
-
+  
 <div class="slide-in" id="pageWrapper">
-<!-- Repository Section -->
-<section id="repository" style="padding: 100px 40px; background-color: #f9f9f9;">
+<div class="iframeframer" style="background: black; position: relative; display: flex; align-items: center; justify-content: center; padding: 10%">
+  <h1 style="
+  font-family: 'Tourney', sans-serif !important; 
+      position: absolute;
+      left: 10%;
+      top: 70%;
+      transform: translateY(-50%) rotate(-90deg);
+      transform-origin: left center;
+      z-index: 10;
+      color: white; 
+      font-family:'Playfair Display', serif; 
+      font-size:70px; 
+      font-weight:900; 
+      letter-spacing:2px; 
+      text-transform:uppercase;
+      text-shadow: 2px 2px 12px rgba(0,0,0,0.7);
+      white-space: nowrap;
+      text-align: center;  
+      ">
+    Climate = <br> Connection
+  </h1>
+  <iframe src="x.html" 
+        width="90%" height="100%"
+        style="border:none; min-height:600px; display:block; border-radius:12px; box-shadow:0 4px 20px rgba(0,0,0,0.1);">
+  </iframe>
+</div><section id="repository" style="padding: 100px 40px; background-color: #f9f9f9;">
   <h2 style="font-family:'Playfair Display',serif;font-size:48px;font-weight:700;text-transform:none;letter-spacing:-0.5px;margin-bottom:25px;background:#2E7D32;background-clip:text;-webkit-background-clip:text;-webkit-text-fill-color:transparent;">Research Repository</h2>
   <div class="repo-toolbar">
     <input type="text" id="repo-search" placeholder="Search by title, author, tags...">
