--- a/blog.html
+++ b/blog.html
@@ -321,30 +321,140 @@ transition: 0.5s;
     </ul>
   </nav>
 
-<div class="slide-in" id="pageWrapper">
-<!-- Repository Section -->
-<section id="repository" style="padding: 100px 40px; background-color: #f9f9f9;">
-  <h2 style="font-family:'Playfair Display',serif;font-size:48px;font-weight:700;text-transform:none;letter-spacing:-0.5px;margin-bottom:25px;background:#2E7D32;background-clip:text;-webkit-background-clip:text;-webkit-text-fill-color:transparent;">Research Repository</h2>
-  <div class="repo-toolbar">
-    <input type="text" id="repo-search" placeholder="Search by title, author, tags...">
-    <select id="repo-sort">
-      <option value="newest">Newest</option>
-      <option value="oldest">Oldest</option>
-      <option value="title">Title</option>
-    </select>
-  </div>
-  <div id="papers" style="display: flex; flex-wrap: wrap; gap: 28px;"></div>
-</section>
+<div id="pageWrapper" class="slide-in">
+  <section id="blog-section" style="padding: 60px 20px; max-width: 1200px; margin: 10%;">
+    <h2 style="font-family:'Playfair Display', serif; font-size:36px; color:#2E7D32; margin-bottom:40px; text-align:center;">EarthMag Blog</h2>
 
-<!-- Modal for PDF preview -->
-<div id="pdfModal" class="modal">
-  <div class="modal-content" style="max-width: 820px; min-width:320px;">
-    <span class="close" id="pdfModalClose" style="float:right;font-size:28px;cursor:pointer;">&times;</span>
-    <div id="pdfModalTitle" style="font-family:'Playfair Display',serif;font-size:22px;margin-bottom:12px;"></div>
-    <iframe id="pdfFrame" src="" width="100%" height="500px" style="border:none; border-radius:10px; box-shadow:0 2px 12px rgba(0,0,0,0.13);"></iframe>
-  </div>
+    <div class="blog-grid" style="display:grid; grid-template-columns:repeat(auto-fit, minmax(320px, 1fr)); gap:30px;">
+
+      <!-- Blog Card -->
+      <div class="blog-card" style="background:#fff; border-radius:16px; box-shadow:0 6px 25px rgba(0,0,0,0.1); overflow:hidden; display:flex; flex-direction:column; transition: transform 0.3s, box-shadow 0.3s;">
+        <img src="https://media.istockphoto.com/id/824379206/photo/high-resolution-planet-earth-view.jpg?s=170667a&w=0&k=20&c=Xuuy0xk6k4yZluVxhTeJk6VduBNMlsqGiDQqz85RDzw=" alt="Blog Image" style="width:100%; height:180px; object-fit:cover;">
+        <div style="padding:20px; flex:1; display:flex; flex-direction:column;">
+          <h3 style="font-family:'Playfair Display', serif; color:#2E7D32; margin-bottom:10px;">Sustainable Battery Storage in Urban Grids</h3>
+          <p style="font-size:14px; color:#555; margin-bottom:8px;"><strong>By:</strong> Riya Sen, Arjun Malhotra | 2024</p>
+          <p style="flex:1; font-size:15px; color:#333; line-height:1.6; margin-bottom:12px;">Explores the integration of next-gen battery storage for urban energy resilience and decarbonization strategies across cities.</p>
+          <div style="display:flex; gap:6px; flex-wrap:wrap; margin-bottom:12px;">
+            <span style="background:#E8F5E9; color:#2E7D32; padding:4px 10px; border-radius:12px; font-size:12px;">Battery</span>
+            <span style="background:#E8F5E9; color:#2E7D32; padding:4px 10px; border-radius:12px; font-size:12px;">Urban</span>
+            <span style="background:#E8F5E9; color:#2E7D32; padding:4px 10px; border-radius:12px; font-size:12px;">Energy</span>
+          </div>
+          <div style="margin-top:auto; display:flex; gap:12px;">
+            <a href="https://arxiv.org/pdf/2301.00001.pdf" target="_blank" style="flex:1; text-align:center; padding:12px 0; border-radius:30px; background:#2E7D32; color:#fff; text-decoration:none; font-weight:500; transition:0.3s;">Read PDF</a>
+            <button style="flex:1; padding:12px 0; border-radius:30px; background:#009688; color:#fff; border:none; cursor:pointer; font-weight:500; transition:0.3s;" onclick="alert('Preview coming soon!')">Preview</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Blog Card -->
+      <div class="blog-card" style="background:#fff; border-radius:16px; box-shadow:0 6px 25px rgba(0,0,0,0.1); overflow:hidden; display:flex; flex-direction:column; transition: transform 0.3s, box-shadow 0.3s;">
+        <img src="https://media.istockphoto.com/id/824379206/photo/high-resolution-planet-earth-view.jpg?s=170667a&w=0&k=20&c=Xuuy0xk6k4yZluVxhTeJk6VduBNMlsqGiDQqz85RDzw=" alt="Blog Image" style="width:100%; height:180px; object-fit:cover;">
+        <div style="padding:20px; flex:1; display:flex; flex-direction:column;">
+          <h3 style="font-family:'Playfair Display', serif; color:#2E7D32; margin-bottom:10px;">Green Hydrogen: Challenges and Opportunities</h3>
+          <p style="font-size:14px; color:#555; margin-bottom:8px;"><strong>By:</strong> Priya Das, Sourav Banerjee | 2023</p>
+          <p style="flex:1; font-size:15px; color:#333; line-height:1.6; margin-bottom:12px;">A comprehensive review of green hydrogen production technologies and their role in global and Indian energy transitions.</p>
+          <div style="display:flex; gap:6px; flex-wrap:wrap; margin-bottom:12px;">
+            <span style="background:#E0F2F1; color:#2E7D32; padding:4px 10px; border-radius:12px; font-size:12px;">Hydrogen</span>
+            <span style="background:#E0F2F1; color:#2E7D32; padding:4px 10px; border-radius:12px; font-size:12px;">Green</span>
+            <span style="background:#E0F2F1; color:#2E7D32; padding:4px 10px; border-radius:12px; font-size:12px;">Energy</span>
+          </div>
+          <div style="margin-top:auto; display:flex; gap:12px;">
+            <a href="https://arxiv.org/pdf/2302.00002.pdf" target="_blank" style="flex:1; text-align:center; padding:12px 0; border-radius:30px; background:#2E7D32; color:#fff; text-decoration:none; font-weight:500; transition:0.3s;">Read PDF</a>
+            <button style="flex:1; padding:12px 0; border-radius:30px; background:#009688; color:#fff; border:none; cursor:pointer; font-weight:500; transition:0.3s;" onclick="alert('Preview coming soon!')">Preview</button>
+          </div>
+        </div>
+      </div>
+      <div class="blog-card" style="background:#fff; border-radius:16px; box-shadow:0 6px 25px rgba(0,0,0,0.1); overflow:hidden; display:flex; flex-direction:column; transition: transform 0.3s, box-shadow 0.3s;">
+        <img src="https://media.istockphoto.com/id/824379206/photo/high-resolution-planet-earth-view.jpg?s=170667a&w=0&k=20&c=Xuuy0xk6k4yZluVxhTeJk6VduBNMlsqGiDQqz85RDzw=" alt="Blog Image" style="width:100%; height:180px; object-fit:cover;">
+        <div style="padding:20px; flex:1; display:flex; flex-direction:column;">
+          <h3 style="font-family:'Playfair Display', serif; color:#2E7D32; margin-bottom:10px;">Sustainable Battery Storage in Urban Grids</h3>
+          <p style="font-size:14px; color:#555; margin-bottom:8px;"><strong>By:</strong> Riya Sen, Arjun Malhotra | 2024</p>
+          <p style="flex:1; font-size:15px; color:#333; line-height:1.6; margin-bottom:12px;">Explores the integration of next-gen battery storage for urban energy resilience and decarbonization strategies across cities.</p>
+          <div style="display:flex; gap:6px; flex-wrap:wrap; margin-bottom:12px;">
+            <span style="background:#E8F5E9; color:#2E7D32; padding:4px 10px; border-radius:12px; font-size:12px;">Battery</span>
+            <span style="background:#E8F5E9; color:#2E7D32; padding:4px 10px; border-radius:12px; font-size:12px;">Urban</span>
+            <span style="background:#E8F5E9; color:#2E7D32; padding:4px 10px; border-radius:12px; font-size:12px;">Energy</span>
+          </div>
+          <div style="margin-top:auto; display:flex; gap:12px;">
+            <a href="https://arxiv.org/pdf/2301.00001.pdf" target="_blank" style="flex:1; text-align:center; padding:12px 0; border-radius:30px; background:#2E7D32; color:#fff; text-decoration:none; font-weight:500; transition:0.3s;">Read PDF</a>
+            <button style="flex:1; padding:12px 0; border-radius:30px; background:#009688; color:#fff; border:none; cursor:pointer; font-weight:500; transition:0.3s;" onclick="alert('Preview coming soon!')">Preview</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Blog Card -->
+      <div class="blog-card" style="background:#fff; border-radius:16px; box-shadow:0 6px 25px rgba(0,0,0,0.1); overflow:hidden; display:flex; flex-direction:column; transition: transform 0.3s, box-shadow 0.3s;">
+        <img src="https://media.istockphoto.com/id/824379206/photo/high-resolution-planet-earth-view.jpg?s=170667a&w=0&k=20&c=Xuuy0xk6k4yZluVxhTeJk6VduBNMlsqGiDQqz85RDzw=" alt="Blog Image" style="width:100%; height:180px; object-fit:cover;">
+        <div style="padding:20px; flex:1; display:flex; flex-direction:column;">
+          <h3 style="font-family:'Playfair Display', serif; color:#2E7D32; margin-bottom:10px;">Green Hydrogen: Challenges and Opportunities</h3>
+          <p style="font-size:14px; color:#555; margin-bottom:8px;"><strong>By:</strong> Priya Das, Sourav Banerjee | 2023</p>
+          <p style="flex:1; font-size:15px; color:#333; line-height:1.6; margin-bottom:12px;">A comprehensive review of green hydrogen production technologies and their role in global and Indian energy transitions.</p>
+          <div style="display:flex; gap:6px; flex-wrap:wrap; margin-bottom:12px;">
+            <span style="background:#E0F2F1; color:#2E7D32; padding:4px 10px; border-radius:12px; font-size:12px;">Hydrogen</span>
+            <span style="background:#E0F2F1; color:#2E7D32; padding:4px 10px; border-radius:12px; font-size:12px;">Green</span>
+            <span style="background:#E0F2F1; color:#2E7D32; padding:4px 10px; border-radius:12px; font-size:12px;">Energy</span>
+          </div>
+          <div style="margin-top:auto; display:flex; gap:12px;">
+            <a href="https://arxiv.org/pdf/2302.00002.pdf" target="_blank" style="flex:1; text-align:center; padding:12px 0; border-radius:30px; background:#2E7D32; color:#fff; text-decoration:none; font-weight:500; transition:0.3s;">Read PDF</a>
+            <button style="flex:1; padding:12px 0; border-radius:30px; background:#009688; color:#fff; border:none; cursor:pointer; font-weight:500; transition:0.3s;" onclick="alert('Preview coming soon!')">Preview</button>
+          </div>
+        </div>
+      </div>
+      <div class="blog-card" style="background:#fff; border-radius:16px; box-shadow:0 6px 25px rgba(0,0,0,0.1); overflow:hidden; display:flex; flex-direction:column; transition: transform 0.3s, box-shadow 0.3s;">
+        <img src="https://media.istockphoto.com/id/824379206/photo/high-resolution-planet-earth-view.jpg?s=170667a&w=0&k=20&c=Xuuy0xk6k4yZluVxhTeJk6VduBNMlsqGiDQqz85RDzw=" alt="Blog Image" style="width:100%; height:180px; object-fit:cover;">
+        <div style="padding:20px; flex:1; display:flex; flex-direction:column;">
+          <h3 style="font-family:'Playfair Display', serif; color:#2E7D32; margin-bottom:10px;">Sustainable Battery Storage in Urban Grids</h3>
+          <p style="font-size:14px; color:#555; margin-bottom:8px;"><strong>By:</strong> Riya Sen, Arjun Malhotra | 2024</p>
+          <p style="flex:1; font-size:15px; color:#333; line-height:1.6; margin-bottom:12px;">Explores the integration of next-gen battery storage for urban energy resilience and decarbonization strategies across cities.</p>
+          <div style="display:flex; gap:6px; flex-wrap:wrap; margin-bottom:12px;">
+            <span style="background:#E8F5E9; color:#2E7D32; padding:4px 10px; border-radius:12px; font-size:12px;">Battery</span>
+            <span style="background:#E8F5E9; color:#2E7D32; padding:4px 10px; border-radius:12px; font-size:12px;">Urban</span>
+            <span style="background:#E8F5E9; color:#2E7D32; padding:4px 10px; border-radius:12px; font-size:12px;">Energy</span>
+          </div>
+          <div style="margin-top:auto; display:flex; gap:12px;">
+            <a href="https://arxiv.org/pdf/2301.00001.pdf" target="_blank" style="flex:1; text-align:center; padding:12px 0; border-radius:30px; background:#2E7D32; color:#fff; text-decoration:none; font-weight:500; transition:0.3s;">Read PDF</a>
+            <button style="flex:1; padding:12px 0; border-radius:30px; background:#009688; color:#fff; border:none; cursor:pointer; font-weight:500; transition:0.3s;" onclick="alert('Preview coming soon!')">Preview</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Blog Card -->
+      <div class="blog-card" style="background:#fff; border-radius:16px; box-shadow:0 6px 25px rgba(0,0,0,0.1); overflow:hidden; display:flex; flex-direction:column; transition: transform 0.3s, box-shadow 0.3s;">
+        <img src="https://media.istockphoto.com/id/824379206/photo/high-resolution-planet-earth-view.jpg?s=170667a&w=0&k=20&c=Xuuy0xk6k4yZluVxhTeJk6VduBNMlsqGiDQqz85RDzw=" alt="Blog Image" style="width:100%; height:180px; object-fit:cover;">
+        <div style="padding:20px; flex:1; display:flex; flex-direction:column;">
+          <h3 style="font-family:'Playfair Display', serif; color:#2E7D32; margin-bottom:10px;">Green Hydrogen: Challenges and Opportunities</h3>
+          <p style="font-size:14px; color:#555; margin-bottom:8px;"><strong>By:</strong> Priya Das, Sourav Banerjee | 2023</p>
+          <p style="flex:1; font-size:15px; color:#333; line-height:1.6; margin-bottom:12px;">A comprehensive review of green hydrogen production technologies and their role in global and Indian energy transitions.</p>
+          <div style="display:flex; gap:6px; flex-wrap:wrap; margin-bottom:12px;">
+            <span style="background:#E0F2F1; color:#2E7D32; padding:4px 10px; border-radius:12px; font-size:12px;">Hydrogen</span>
+            <span style="background:#E0F2F1; color:#2E7D32; padding:4px 10px; border-radius:12px; font-size:12px;">Green</span>
+            <span style="background:#E0F2F1; color:#2E7D32; padding:4px 10px; border-radius:12px; font-size:12px;">Energy</span>
+          </div>
+          <div style="margin-top:auto; display:flex; gap:12px;">
+            <a href="https://arxiv.org/pdf/2302.00002.pdf" target="_blank" style="flex:1; text-align:center; padding:12px 0; border-radius:30px; background:#2E7D32; color:#fff; text-decoration:none; font-weight:500; transition:0.3s;">Read PDF</a>
+            <button style="flex:1; padding:12px 0; border-radius:30px; background:#009688; color:#fff; border:none; cursor:pointer; font-weight:500; transition:0.3s;" onclick="alert('Preview coming soon!')">Preview</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Add more cards similarly -->
+    </div>
+  </section>
+
+  <script>
+    // Hover effect for cards
+    document.querySelectorAll('.blog-card').forEach(card => {
+      card.addEventListener('mouseenter', () => {
+        card.style.transform = 'translateY(-10px)';
+        card.style.boxShadow = '0 14px 35px rgba(0,0,0,0.18)';
+      });
+      card.addEventListener('mouseleave', () => {
+        card.style.transform = 'translateY(0)';
+        card.style.boxShadow = '0 6px 25px rgba(0,0,0,0.1)';
+      });
+    });
+  </script>
 </div>
-
 
   <!-- Footer -->
 <div id="contact" style="background-color: #f2f2f2; padding: 40px 20px; font-family: 'Arial', sans-serif; color: #333;">
@@ -652,6 +762,7 @@ document.addEventListener('DOMContentLoaded', () => {
 // Define page order for directional transitions
 const pageOrder = {
   "index.html": 1,
+  "":1,
   "facts.html": 2,
   "data.html": 3,
   "about.html": 4,
