--- a/about.html
+++ b/about.html
@@ -14,6 +14,10 @@ margin: 0; padding: 0; box-sizing: border-box; }
     a, button {
       cursor: none !important; /* remove default pointer */
     }
+    .footicon:hover {
+  transform: scale(1.2);
+  color: #1d1d1d;
+}
 
     .custom-cursor {
       width: 18px;
@@ -363,11 +367,18 @@ transition: 0.5s;
       <h3 style="color: #2E7D32; font-family: 'Playfair Display', serif; font-size: 24px; margin-bottom: 15px;">Stay Connected</h3>
       <p style="margin: 5px 0; font-size: 16px;">Follow us for updates on sustainability:</p>
       <div style="display: flex; gap: 15px; margin-top: 10px;">
-        <a href="https://facebook.com" target="_blank" style="font-size: 24px; color: #2E7D32; text-decoration: none;">&#x1F464;</a>
-        <a href="https://twitter.com" target="_blank" style="font-size: 24px; color: #2E7D32; text-decoration: none;">&#x1F426;</a>
-        <a href="https://instagram.com" target="_blank" style="font-size: 24px; color: #2E7D32; text-decoration: none;">&#x1F33F;</a>
-        <a href="https://linkedin.com" target="_blank" style="font-size: 24px; color: #2E7D32; text-decoration: none;">&#x1F465;</a>
-      </div>
+        <a href="https://facebook.com/earthmag" target="_blank" style="font-size: 24px; color: #2E7D32; text-decoration: none;">
+          <i class="fab fa-facebook footicon"></i>
+        </a>
+        <a href="https://twitter.com/earthmag" target="_blank" style="font-size: 24px; color: #2E7D32; text-decoration: none;">
+          <i class="fab fa-twitter footicon"></i>
+        </a>
+        <a href="https://instagram.com/earthmagg" target="_blank" style="font-size: 24px; color: #2E7D32; text-decoration: none;">
+          <i class="fab fa-instagram footicon"></i>
+        </a>
+        <a href="https://www.linkedin.com/company/earthmag" target="_blank" style="font-size: 24px; color: #2E7D32; text-decoration: none;">
+          <i class="fab fa-linkedin footicon"></i>
+        </a>      </div>
     </div>
 
   </div>
@@ -376,7 +387,8 @@ transition: 0.5s;
   <div style="text-align: center; margin-top: 30px; font-size: 14px; color: #666;">
     <p>© 2025 EarthMag. All Rights Reserved.</p>
   </div>
-</div>  <div id="applyModal" class="modal">
+</div>
+  <div id="applyModal" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
       <h2>Apply to Write</h2>
@@ -811,6 +823,17 @@ document.addEventListener('DOMContentLoaded', () => {
     });
   }
 });
+const hideCursorElements = document.querySelectorAll('input, textarea, button, a, iframe');
+
+hideCursorElements.forEach(el => {
+  el.addEventListener('mouseenter', () => {
+    cursor.classList.add('hidden');
+  });
+  el.addEventListener('mouseleave', () => {
+    cursor.classList.remove('hidden');
+  });
+});
+
 </script>
 </body>
 </html>
