--- a/journal.html
+++ b/journal.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>EarthMag</title>
+    <!-- Font Awesome CDN for social icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <link rel="icon" type="image/png" href="favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Tourney:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -308,6 +310,11 @@ transition: 0.5s;
 
 .slide-out-left  { transform: translateX(-100%); opacity: 0; transition: transform 0.5s ease, opacity 0.5s ease; }
 .slide-out-right { transform: translateX(100%); opacity: 0; transition: transform 0.5s ease, opacity 0.5s ease; }  
+.footicon:hover {
+  transform: scale(1.2);
+  color: #1d1d1d;
+}
+
 </style>
 </head>
 <body>
@@ -390,11 +397,18 @@ transition: 0.5s;
       <h3 style="color: #2E7D32; font-family: 'Playfair Display', serif; font-size: 24px; margin-bottom: 15px;">Stay Connected</h3>
       <p style="margin: 5px 0; font-size: 16px;">Follow us for updates on sustainability:</p>
       <div style="display: flex; gap: 15px; margin-top: 10px;">
-        <a href="https://facebook.com" target="_blank" style="font-size: 24px; color: #2E7D32; text-decoration: none;">&#x1F464;</a>
-        <a href="https://twitter.com" target="_blank" style="font-size: 24px; color: #2E7D32; text-decoration: none;">&#x1F426;</a>
-        <a href="https://instagram.com" target="_blank" style="font-size: 24px; color: #2E7D32; text-decoration: none;">&#x1F33F;</a>
-        <a href="https://linkedin.com" target="_blank" style="font-size: 24px; color: #2E7D32; text-decoration: none;">&#x1F465;</a>
-      </div>
+        <a href="https://facebook.com/earthmag" target="_blank" style="font-size: 24px; color: #2E7D32; text-decoration: none;">
+          <i class="fab fa-facebook footicon"></i>
+        </a>
+        <a href="https://twitter.com/earthmag" target="_blank" style="font-size: 24px; color: #2E7D32; text-decoration: none;">
+          <i class="fab fa-twitter footicon"></i>
+        </a>
+        <a href="https://instagram.com/earthmagg" target="_blank" style="font-size: 24px; color: #2E7D32; text-decoration: none;">
+          <i class="fab fa-instagram footicon"></i>
+        </a>
+        <a href="https://www.linkedin.com/company/earthmag" target="_blank" style="font-size: 24px; color: #2E7D32; text-decoration: none;">
+          <i class="fab fa-linkedin footicon"></i>
+        </a>      </div>
     </div>
 
   </div>
@@ -692,7 +706,18 @@ const pageOrder = {
 const currentPage = window.location.pathname.split("/").pop();
 const prevIndex = sessionStorage.getItem('prevPageIndex') || 0;
 const currentIndex = pageOrder[currentPage] || 0;
+const cursor = document.getElementById('customCursor');
 
+const hideCursorElements = document.querySelectorAll('input, textarea, button, a, iframe');
+
+hideCursorElements.forEach(el => {
+  el.addEventListener('mouseenter', () => {
+    cursor.classList.add('hidden');
+  });
+  el.addEventListener('mouseleave', () => {
+    cursor.classList.remove('hidden');
+  });
+});
 // Apply slide-in direction
 if (currentIndex >= prevIndex) pageWrapper.classList.add('slide-in-right');
 else pageWrapper.classList.add('slide-in-left');
