--- a/about.html
+++ b/about.html
@@ -326,18 +326,42 @@ transition: 0.5s;
   </nav>
 
 <div class="slide-in" id="pageWrapper">
-<!-- Repository Section -->
-<section id="repository" style="padding: 100px 40px; background-color: #f9f9f9;">
-  <h2 style="font-family:'Playfair Display',serif;font-size:48px;font-weight:700;text-transform:none;letter-spacing:-0.5px;margin-bottom:25px;background:#2E7D32;background-clip:text;-webkit-background-clip:text;-webkit-text-fill-color:transparent;">Research Repository</h2>
-  <div class="repo-toolbar">
-    <input type="text" id="repo-search" placeholder="Search by title, author, tags...">
-    <select id="repo-sort">
-      <option value="newest">Newest</option>
-      <option value="oldest">Oldest</option>
-      <option value="title">Title</option>
-    </select>
+
+<!-- About Section -->
+<section id="about" style="padding: 100px 40px; background-color: #f9f9f9;">
+  <h2 style="font-family:'Playfair Display',serif;font-size:52px;font-weight:700;text-align:center;letter-spacing:-0.5px;margin-bottom:50px;color:#2E7D32;">
+    About EarthMag
+  </h2>
+
+  <div style="display:flex;flex-wrap:wrap;align-items:center;justify-content:center;gap:40px;max-width:1200px;margin:0 auto;">
+    
+    <!-- Left Column: Text -->
+    <div style="flex:1;min-width:320px;max-width:600px;">
+      <p style="font-family:'Inter',sans-serif;line-height:1.8;font-size:18px;color:#444;margin-bottom:20px;">
+        <strong>EarthMag</strong> is a youth-driven platform committed to making environmental science accessible, engaging, and actionable. We believe that knowledge should not be locked in academic journals, but shared widely to inspire communities, influence policy, and empower the next generation of changemakers.
+      </p>
+      <p style="font-family:'Inter',sans-serif;line-height:1.8;font-size:18px;color:#444;margin-bottom:20px;">
+        Founded by <strong>Advay Nathany</strong>, an international student, researcher, and passionate advocate for sustainability, EarthMag was born out of a desire to bridge the gap between scientific research and public understanding. His journey began with projects in rural development and urban sustainability, and grew into a global mission: to create a platform where science meets society.
+      </p>
+      <p style="font-family:'Inter',sans-serif;line-height:1.8;font-size:18px;color:#444;margin-bottom:20px;">
+        As a leader, debater, and environmental researcher, Advay brings together experiences in academia, activism, and entrepreneurship to inspire others to think critically about the world we live in. His vision for EarthMag is to cultivate a community where students, professionals, and everyday citizens can engage with environmental issues and take part in shaping solutions.
+      </p>
+      <blockquote style="font-family:'Playfair Display',serif;font-size:22px;font-style:italic;color:#2E7D32;margin:30px 0;padding-left:20px;border-left:4px solid #2E7D32;">
+        “Change starts with awareness — and awareness starts with us.”
+      </blockquote>
+    </div>
+
+    <!-- Right Column: Images -->
+    <div style="flex:1;min-width:280px;max-width:500px;display:flex;flex-direction:column;gap:20px;align-items:center;">
+      <img src="images/earthmag-hero.jpg" alt="EarthMag mission illustration" style="width:100%;border-radius:16px;box-shadow:0 6px 20px rgba(0,0,0,0.15);object-fit:cover;">
+      <img src="images/advay-nathany.jpg" alt="Founder Advay Nathany" style="width:80%;border-radius:50%;box-shadow:0 6px 16px rgba(0,0,0,0.15);object-fit:cover;">
+    </div>
+
   </div>
-  <div id="papers" style="display: flex; flex-wrap: wrap; gap: 28px;"></div>
+
+  <p style="font-family:'Inter',sans-serif;max-width:900px;margin:40px auto 0 auto;text-align:center;line-height:1.8;font-size:18px;color:#444;">
+    Whether it’s through our fact-based resources, internship opportunities, research journal, or storytelling initiatives, EarthMag stands as a reminder that change starts with awareness — and awareness starts with us. Together, we can create a more informed, resilient, and sustainable world.
+  </p>
 </section>
 
 <!-- Modal for PDF preview -->
