--- a/intern.html
+++ b/intern.html
@@ -57,7 +57,7 @@ margin: 0; padding: 0; box-sizing: border-box; }
       max-width: 90%;
       padding: 14px 28px;
       border-radius: 18px;
-      background: rgba(0, 0, 0, 0.15);
+      background:white;
       backdrop-filter: blur(25px) saturate(180%);
       -webkit-backdrop-filter: blur(25px) saturate(180%);
       box-shadow: 0 8px 32px rgba(0,0,0,0.2);
