--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ transition: 0.5s;
 
   <!-- Sections -->
   <section id="facts">
-    <h2>Energy and Environment Facts</h2>git
+    <h2>Energy and Environment Facts</h2>samkarn ilysm
     <p>Key insights and data about sustainability, energy storage, and environmental engineering.</p>
   </section>
 
